--- a/VoteIT/package.json
+++ b/VoteIT/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@trendmicro/react-sidenav": "^0.4.5",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "jquery": "3.3.1",
-    "react": "^16.0.0",
+    "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-burger-menu": "^2.6.10",
     "react-dom": "^16.0.0",
     "react-modal": "^3.8.1",
