--- a/VoteIT/package.json
+++ b/VoteIT/package.json
@@ -6,15 +6,19 @@
     "@trendmicro/react-sidenav": "^0.4.5",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "jquery": "3.3.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-burger-menu": "^2.6.10",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.0.0",
+    "react-minimal-pie-chart": "^4.2.0",
     "react-modal": "^3.8.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.5",
+    "react-svg-piechart": "^2.4.0",
     "react-toastify": "^5.2.1",
     "reactstrap": "^6.3.0",
     "rimraf": "^2.6.2"
