--- a/VoteIT/package.json
+++ b/VoteIT/package.json
@@ -21,7 +21,8 @@
     "react-svg-piechart": "^2.4.0",
     "react-toastify": "^5.2.1",
     "reactstrap": "^6.3.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "ajv": "^6.0.0",
